package com.toptal.bookshopv2.model;
public enum Role { USER, ADMIN }
